# verseyard

./: .dockerignore  .env.dist  .gitignore  AGENTS.md  Makefile  README.md  docker-compose-dev.yml  pyproject.toml
docker/: Dockerfile
docker/django/dev/: init.sh
docker/web/: default.conf
docs/: auth-api.md  poems-api.md
src/app/: admin.py  authentication.py  exceptions.py  serializers.py  settings.py  tasks.py  urls.py
src/app/admins/: __init__.py  author.py  collection.py  poem.py
src/app/fixtures/: admins.json  schedules.json
src/app/management/commands/: backfill_assessments.py  backfill_embeddings.py  import_poems.py
src/app/middlewares/: __init__.py  exception_handling.py
src/app/migrations/: 0001_initial.py  0002_collection_active_poem_active.py  0002_poemassessment.py  0003_rename_user_to_author.py  0004_rename_username_to_email.py  0005_refreshtoken.py  0006_poem_collection_nullable.py  0007_poemembedding.py  0008_alter_poemembedding_vector.py  0009_alter_poemembedding_table.py  0010_alter_poemembedding_vector.py
src/app/models/: __init__.py  assessment.py  author.py  collection.py  poem.py  poem_embedding.py  refresh_token.py
src/app/static/css/: main.css
src/app/templates/app/: index.html
src/app/tests/: test_assessment.py  test_auth.py  test_backfill_assessments.py  test_fence.py  test_poem.py  test_similar.py
src/app/utils/: assessment.py  fence.py  jwt.py  llm.py  poem.py  similar.py
src/app/views/: __init__.py  assessment.py  auth.py  fence.py  frontend.py  poem.py  similar.py  task.py
src/config/: settings.py  urls.py
