[project]
name = "verseyard"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.3",
    "cryptography>=49.0.0",
    "django>=6.0.7",
    "django-admin-autocomplete-filter>=0.7.1",
    "django-admin-rangefilter>=0.13.5",
    "django-celery-beat>=2.9.0",
    "django-celery-results>=2.6.0",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.17.1",
    "drf-spectacular>=0.30.0",
    "gunicorn>=26.0.0",
    "psycopg[binary]>=3.3.4",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "redis>=8.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.21",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",
    "F",
    "UP",
    "B",
    "SIM",
    "I",
]
ignore = [
    "F401", "F841"
]
